ndb - bug#34638 - O_SYNC incorrectly got disabled if os didnt have O_DIRECT (solaris)